worked with the footer

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,5 +1,10 @@
+body {
+    box-sizing: border-box;
+}
+
 .App {
     display: flex;
+    max-height: 100vh;
 }
 
 .info-section {
@@ -10,5 +15,6 @@
 }
 
 .chat-section {
+    height: 100vh;
     width: 60%;
 }
