--- a/src/components/chatForm/ChatForm.css
+++ b/src/components/chatForm/ChatForm.css
@@ -1,14 +1,39 @@
+footer {
+    border-top: 1px solid #eee;
+    height: 148px;
+    background-color: rgb(248, 231, 231);
+}
+
 .send-message {
     display: block;
-    width: 100vh;
-    position: fixed;
-    bottom: 0;
+    width: auto;
+
+    text-align: center;
+    border-top: 1px solid black;
 }
 
 .send-message input {
-    display: block;
-    margin: 0 auto;
     width: 80%;
-    margin: 10px;
-    padding: 10px 20px;
+    display: block;
+    margin: 50px auto;
+    padding: 20px 20px;
+
+    border-radius: 60px;
+    border: none;
+
+    position: relative;
+}
+
+footer form a {
+    width: 40px;
+
+    bottom: 50px;
+    right: 100px;
+    position: absolute;
+}
+
+footer form a img {
+    display: block;
+    width: 35px;
+    opacity: 0.5;
 }
