--- a/src/components/chatSection/ChatSection.css
+++ b/src/components/chatSection/ChatSection.css
@@ -22,6 +22,10 @@ header h1 {
     font-weight: 500;
 }
 
+.wrapper {
+    min-height: calc(100vh - 150px);
+}
+
 main .chat-response {
     display: flex;
 
